<resources>
    <string name="app_name">Main</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--TODO: NAVIGATION DRAWE-->
    <string name="nameProfile">Tomas Yussef</string>
    <string name="twitter">\@YussefGG</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option3_1">Option3.1</string>
    <string name="option3_2">Option3.2</string>
    <string name="option3_3">Option3.4</string>

</resources>
